<resources>
    <string name="app_name">MyProject</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="type_your_name_or_email">Type your name or email</string>
    <string name="type_your_password">Type your password</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in">log in</string>
    <string name="or">Or</string>
    <string name="with_facebook">with facebook</string>
    <string name="with_twitter">with twitter</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="forget_your_password">forget your password?</string>
    <string name="type_your_phone_number">Type your phone number</string>
    <string name="next">Next</string>
    <string name="sign_up_with_your_email">Sign up with your email</string>
    <string name="type_your_phone_email">Type your phone Email</string>
    <string name="we_have_sent_verification_code_to_your_number">We have sent verification code to your number</string>
    <string name="type_verification_code">Type verification code</string>
    <string name="i_didn_t_get_verification_code">I didn\'t Get verification code</string>
    <string name="re_send_the_code">Re send the code</string>
    <string name="upload_profile_picture">Upload profile picture</string>
    <string name="type_full_name">Type Full name</string>
    <string name="type_username">Type username</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="choose_location">Choose location</string>
    <string name="complete_registration">complete registration</string>
    <string name="loading">Loading...</string>
    <string name="likes">Likes</string>
    <string name="comment">Comment</string>
    <string name="following">following</string>
    <string name="name">Name:</string>
    <string name="username">Username:</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="short_biography">Short biography:</string>
    <string name="email">Email:</string>
    <string name="website">Website:</string>
    <string name="food_item_name">Food item name</string>
    <string name="restaurant_location">Restaurant location</string>
    <string name="review">Review</string>
    <string name="environment">Environment</string>
    <string name="food_quality">Food quality</string>
    <string name="food_price">Food price</string>
    <string name="service">Service</string>
    <string name="food_rating">Food rating</string>
    <string name="share_on_other_social_media">Share on other social media</string>
    <string name="share">share</string>
    <string name="currently_there_ara_no_items_for_display">Currently, there ara no items for display</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="currently_there_ara_no_photos_for_display">Currently, there ara no photos for display</string>
    <string name="upload_cover_image">Upload Cover Image</string>
    <string name="followers">followers</string>
    <string name="edit_profile">edit profile</string>
    <string name="photo_likes">photo likes</string>
    <string name="add_to_favourites">add to favourites</string>
    <string name="people">People</string>
    <string name="follower">Follower</string>
    <string name="location">location</string>
    <string name="restaurant">Restaurant</string>
    <string name="others">others</string>
    <string name="search_here">Search here</string>
    <string name="commented_or_liked">Commented or Liked</string>
    <string name="your_photo">Your photo</string>
    <string name="photo">photo</string>
    <string name="there_are_no_results_that_match_your_search">There are no results that match your search</string>
</resources>
