<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InitialRegistrationActivity"
    android:background="@mipmap/my_sec_background"
    android:gravity="center_horizontal"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/my_logo"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/we_have_sent_verification_code_to_your_number"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="+20 0123456789"
        android:textColor="@color/white"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="35dp"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:src="@drawable/ic_message"
            android:background="@drawable/my_half_rounded_button_shape"
            android:paddingBottom="10dp"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="40dp"
            android:hint="@string/type_verification_code"
            android:gravity="center"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            android:background="@drawable/my_edit_text"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button_shape"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textAllCaps="false"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/i_didn_t_get_verification_code"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/re_send_the_code"
        android:textStyle="bold"
        android:textColor="@color/white"
        />
    </LinearLayout>