<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@mipmap/my_background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/my_login_shape"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/my_logo"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:src="@drawable/ic_profile"
            android:background="@drawable/my_imge_shape"
            android:layout_gravity="top"
            android:padding="10dp"
            />

        <EditText
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="top"
            android:background="@drawable/my_edit_text"
            android:hint="@string/type_your_name_or_email"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:src="@drawable/ic_lock"
            android:background="@drawable/my_imge_shape"
            android:layout_gravity="top"
            android:padding="10dp"
            />

        <EditText
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="top"
            android:background="@drawable/my_edit_text"
            android:hint="@string/type_your_password"
            android:inputType="textPassword"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textColor="@color/white"
            android:layout_marginEnd="40dp"
            />
        <Button
            android:id="@+id/login_activity_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:background="@drawable/my_button_shape"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/or"
           android:textColor="@color/white"
           />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/log_in"
            android:textSize="12sp"
            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_facebook"
            android:background="@color/image_transparent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/with_facebook"
            android:textSize="12sp"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/log_in"
            android:textSize="12sp"
            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_twitter"
            android:background="@color/image_transparent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/with_twitter"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/login_activity_redirect_2_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_here"
            android:textColor="@color/material_red"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <LinearLayout
            android:id="@+id/login_activity_redirect_2_forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/transparent"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sad_face"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/forget_your_password"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>