<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InitialRegistrationActivity"
    android:background="@mipmap/my_background"
    android:gravity="center_horizontal"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/my_logo"
        android:layout_marginTop="50dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="+20"
            android:textColor="@color/white"
            android:background="@drawable/my_half_rounded_button_shape"
            />
        <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="@string/type_your_phone_number"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            android:background="@drawable/my_edit_text"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        >
        <Button
            android:id="@+id/initial_registration_using_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button_shape"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textAllCaps="false"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textAllCaps="true"
        android:textColor="@color/grey"
        android:layout_marginTop="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_with_your_email"
            android:textColor="@color/white"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="35dp"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:src="@drawable/ic_email"
                android:background="@drawable/my_half_rounded_button_shape"
                android:paddingBottom="10dp"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="40dp"
                android:hint="@string/type_your_phone_email"
                android:textColorHint="@color/white"
                android:textSize="14sp"
                android:background="@drawable/my_edit_text"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="35dp"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:src="@drawable/ic_lock"
                android:background="@drawable/my_half_rounded_button_shape"
                android:paddingBottom="10dp"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="40dp"
                android:hint="@string/type_your_password"
                android:textColorHint="@color/white"
                android:textSize="14sp"
                android:background="@drawable/my_edit_text"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            >
            <Button
                android:id="@+id/initial_registration_using_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/my_button_shape"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textAllCaps="false"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>